# runall

./: Cargo.toml  DEV.org  README.md  justfile
src/: main.rs
