[package]
name = "runall"
version = "0.1.0"
edition = "2021"
description = "Run multiple commands concurrently."
authors = ["Robert Krahn <robert.krahn@gmail.com>"]
license = "MIT"
keywords = ["concurrently", "cli"]
repository = "https://github.com/rksm/runall"

[dependencies]
clap = { version = "4.3.0", features = ["derive", "env"] }
ctrlc = "3.2.5"
flume = "0.10.14"
